# Reinvent

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README  README.md  input.py  main_test.py  model_container.py  pytest.ini  reinvent.yml  reinvent_minimal.yml  reinvent_shared.yml  requirements.txt  setup.cfg
configs/: example.config.json
data/: datasets_description.txt  drd2_data.7z
diversity_filters/: __init__.py  base_diversity_filter.py  diversity_filter_factory.py  diversity_filter_memory.py  diversity_filter_parameters.py  identical_murcko_scaffold.py  identical_topological_scaffold.py  no_scaffold_filter.py  scaffold_similarity.py
models/: dataset.py  model.py
running_modes/: .directory  manager.py
running_modes/automated_curriculum_learning/: automated_curriculum_runner.py  scoring_table.py
running_modes/configurations/: __init__.py  general_configuration_envelope.py
running_modes/constructors/: automated_curriculum_learning_mode_constructor.py  base_running_mode.py  create_model_mode_constructor.py  curriculum_learning_mode_constructor.py  lib_invent_reinforcement_learning_constructor.py  reinforcement_learning_mode_constructor.py  running_mode.py  sampling_mode_constructor.py  scoring_mode_constructor.py  transfer_learning_mode_constructor.py  (+1 more)
scaffold/: scaffold_filter_factory.py  scaffold_filters.py  scaffold_parameters.py  scaffold_similarity.py
scoring/: score_summary.py  score_transformations.py  scoring_function_factory.py  scoring_function_parameters.py
src/reinvent/: cli.py  (+4 more)
utils/: __init__.py  general.py  smiles.py  unit_testing.py
(+474 files in other folders)
