##########################
# Setup.py Configuration #
##########################
[metadata]
name = reinvent
version = 0.0.1-dev

[options]
install_requires =
    torch
    requests
    pandas
    tqdm
    numpy
    scipy
    click
    scikit-learn
    pathos==0.2.5
    tensorboard==1.14.0
    pytest==5.3.0


# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    reinvent = reinvent.cli:main
